Fix created at alignment. Adjust message color balance.

--- a/app/styles/_message.sass
+++ b/app/styles/_message.sass
@@ -13,9 +13,9 @@ message
   margin: 6px 0
 
   border-radius: 2px
-  border: 1px solid #ccc
+  border: 1px solid #efefef
 
-  background-color: #fafafa
+  background-color: #fdfdfd
   max-width: 20em
 
   .message-body
@@ -40,11 +40,12 @@ message
 
       font-size: 0.7em
 
-    .created-at
+    .message-created-at
       // REFACTOR: floats should be reserved for images wrapping around text.
       // Flexbox should sort all this inline-block work out.
       float: right
       margin-top: 8px
+      margin-left: 1em
 
       font-variant: small-caps
 
